# parallel-processing-mandelbrot.cpp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml
include/: const.hpp  function.hpp  interface.hpp
public/: .gitignore  index.html
src/: exec_multi.cpp  exec_single.cpp  hsl_to_rgb.cpp  main.cpp
